# LovelyERes

./: README.md  package.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: detection_manager.rs  docker_manager.rs  file_analysis.rs  lib.rs  ssh_manager.rs  ssh_manager_russh.rs
src/css/: base.css
src/modules/emergency/: emergencyPageManager.ts
src/modules/system/: systemInfoManager.ts
src/modules/ui/: cronContextMenu.ts  firewallContextMenu.ts  modernUIRenderer.ts  networkContextMenu.ts  serviceContextMenu.ts  startupContextMenu.ts  userContextMenu.ts
